# kinegraph

./: .gitignore  CLAUDE.md  CLEANUP_REPORT.md  package.json  test-wasm-browser.html  test-wasm-memory.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/commands/: similarity.md
public/wasm/: README.md  kinegraph_wasm.d.ts  kinegraph_wasm.js  kinegraph_wasm_bg.wasm.d.ts  package.json
scripts/: setup-wasm.sh
src/: App.tsx  index.css  test-drawing-flow.html  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/animation/: mod.rs
src-tauri/api/: commands.rs  drawing.rs  hybrid_commands.rs  mod.rs
src-tauri/bindings-generator/: Cargo.toml
src-tauri/drawing_engine/: mod.rs  pipeline.rs  pipeline_test.rs  renderer.rs  texture.rs
src-tauri/src/: lib.rs  main.rs  specta.rs  tauri_bindings.rs  tauri_bindings_simple.rs
src-tauri/src/drawing_engine/: buffer.rs  canvas_state.rs  commands.rs  compositor.rs  engine.rs  layer.rs  mod.rs  renderer.rs  stroke.rs
src-tauri/src/ipc/: binary.rs  diff_handlers.rs  handlers.rs  mod.rs
src-tauri/state/: mod.rs
src-tauri/tests/: integration_test.rs  offscreen_renderer_test.rs  state_management_analysis_report.rs  state_management_error_test.rs  test_helpers.rs
src-wasm/: .gitignore  Cargo.toml  README_IMPROVEMENTS.md  build.sh
src-wasm/examples/: improved_stroke.html  improved_stroke.rs  stroke_test.html
src-wasm/src/: draw_engine.rs  lib.rs  shaders.rs  types.rs  worker.rs
src-wasm/tests/: web.rs
src/components/: Button.tsx  Canvas.tsx  DrawingCanvas.tsx  LayerPanel.tsx  LayerPanelDrawingEngine.tsx  Panel.tsx  Timeline.tsx  Toolbar.tsx
src/lib/: bindings.ts  canvas2dContext.ts  commands.ts  drawingEngine.ts  hybridCommands.ts  hybridDrawingEngine.ts  tauri.ts  testWasmLoader.ts  testWasmWorker.ts  useCanvas.ts  useDrawingEngine.ts  useHybridDrawing.ts  useLayerManagement.ts  useOffscreenCanvas.ts  useWasmCanvas.ts  wasmBindgen.ts  wasmCanvas.ts  wasmCanvasWorker.ts  wasmDirect.ts  wasmDrawEngine.ts  wasmDrawEngineWorker.ts  wasmLoader.ts  wasmVite.ts
src/lib/__tests__/: README.md  manual-test.html  setup.ts  tauri.test.ts
src/lib/renderer/: canvasRenderer.ts
src/store/: atoms.ts
src/types/: drawEngine.ts  drawing.ts
