[package]
name = "kinegraph"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "kinegraph"

[features]
default = []
specta = ["dep:specta", "dep:tauri-specta", "dep:specta-typescript"]

[[bin]]
name = "generate-bindings"
path = "src/bin/generate-bindings.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kinegraph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# アニメーション・画像処理用
image = { version = "0.25", features = ["png", "jpeg"] }
# xdts形式対応用
roxmltree = "0.20"
# ファイル処理用
tokio = { version = "1.40", features = ["full"] }
# ログ出力用
log = "0.4"
env_logger = "0.11"
# 非同期処理用
futures = "0.3"
# タイムスタンプ用
chrono = { version = "0.4", features = ["serde"] }
# Base64エンコーディング用
base64 = "0.22.1"
# UUID生成用
uuid = { version = "1.11", features = ["v4", "serde"] }
# 非同期チャンネル通信用
flume = "0.11"
# 型安全なRust-TypeScript連携用
specta = { version = "=2.0.0-rc.20", optional = true }
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"], optional = true }
specta-typescript = { version = "0.0.7", optional = true }
# GPU描画エンジン用
wgpu = { version = "0.20", features = ["webgl"] }
bytemuck = { version = "1.16", features = ["derive"] }
# データ圧縮用（高速バイナリ転送）
lz4 = "1.28"

[dev-dependencies]
# テスト用依存関係
tokio-test = "0.4"
tempfile = "3.0"
tauri-runtime = "2"
tauri-runtime-wry = "2"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
